--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
