--- a/package.json
+++ b/package.json
@@ -21,11 +21,9 @@
     "react-hook-form": "^7.59.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
-<<<<<<< HEAD
-    "styled-components": "^6.1.19"
-=======
+    "styled-components": "^6.1.19",
     "xlsx": "^0.18.5"
->>>>>>> 6b60373 (last change before commit)
+
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
